@@ -12,6 +12,7 @@ CheckSum Tool 0.5.0
   Improve file size formatting in main window.
   Make configuration XML file more structured.
   Add version number for the configuration file.
+  Improve message asking about adding subfolders.
 
 CheckSum Tool 0.4.0 - 2008-02-05 (r158)
   Add Select All to Edit-menu (also CTRL+A shortcut key)
